--- a/AnimasionSwift/Base.lproj/Main.storyboard
+++ b/AnimasionSwift/Base.lproj/Main.storyboard
@@ -1,24 +1,84 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Basic View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="BasicViewController" customModule="AnimasionSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ANIMATIONS" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D3k-lz-8JB">
+                                <rect key="frame" x="133" y="297.5" width="148" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="afg-4T-WjK"/>
+                                    <constraint firstAttribute="width" constant="148" id="lZG-fB-LG6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="golf" translatesAutoresizingMaskIntoConstraints="NO" id="OCV-JU-JI6">
+                                <rect key="frame" x="132" y="373" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="pyr-5g-hv8"/>
+                                    <constraint firstAttribute="width" constant="150" id="yhG-mN-u14"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mNg-gc-RYW">
+                                <rect key="frame" x="155" y="555" width="104" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <color key="backgroundColor" red="1" green="0.72230407949185449" blue="0.53349173238698444" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="OCV-JU-JI6" firstAttribute="top" secondItem="D3k-lz-8JB" secondAttribute="bottom" constant="45.5" id="0Xe-qt-LfS"/>
+                            <constraint firstItem="D3k-lz-8JB" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Ccn-Ia-iXu"/>
+                            <constraint firstItem="OCV-JU-JI6" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="Y10-Fm-hSB"/>
+                            <constraint firstItem="mNg-gc-RYW" firstAttribute="top" secondItem="OCV-JU-JI6" secondAttribute="bottom" constant="32" id="f5k-W1-CWT"/>
+                            <constraint firstItem="mNg-gc-RYW" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="iFF-ji-vUH"/>
+                            <constraint firstItem="OCV-JU-JI6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="uHF-np-G5r"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="loadingLabel" destination="mNg-gc-RYW" id="MLA-ji-Lqy"/>
+                        <outlet property="logoImageView" destination="OCV-JU-JI6" id="CMI-Uv-9bS"/>
+                        <outlet property="titleLabel" destination="D3k-lz-8JB" id="LXs-04-ceJ"/>
+                        <segue destination="sqi-Gg-RuX" kind="show" identifier="toAuthVC" id="bbG-VJ-r1p"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="95.652173913043484" y="88.392857142857139"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="yhe-rX-3UD">
+            <objects>
+                <viewController id="sqi-Gg-RuX" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="7aQ-cc-aE8">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="sbI-dB-ezP"/>
+                        <color key="backgroundColor" red="1" green="0.72230407949999997" blue="0.53349173240000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="uoj-vI-HaN"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fTK-60-PNQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="878" y="83"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="golf" width="32" height="32"/>
+    </resources>
 </document>
