--- a/AnimasionSwift/Base.lproj/Main.storyboard
+++ b/AnimasionSwift/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sqi-Gg-RuX">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -59,23 +59,114 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="95.652173913043484" y="88.392857142857139"/>
+            <point key="canvasLocation" x="-228" y="104"/>
         </scene>
-        <!--View Controller-->
+        <!--Auth View Controller-->
         <scene sceneID="yhe-rX-3UD">
             <objects>
-                <viewController id="sqi-Gg-RuX" sceneMemberID="viewController">
+                <viewController id="sqi-Gg-RuX" customClass="AuthViewController" customModule="AnimasionSwift" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="7aQ-cc-aE8">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Welcome!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1sp-aa-3Fn">
+                                <rect key="frame" x="146.5" y="0.0" width="121" height="33.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="h7d-dH-FMP">
+                                <rect key="frame" x="83" y="310" width="248" height="32"/>
+                                <segments>
+                                    <segment title="Login"/>
+                                    <segment title="Signup"/>
+                                </segments>
+                                <connections>
+                                    <action selector="loginSegmentControllerValueChanged:" destination="sqi-Gg-RuX" eventType="valueChanged" id="ex3-M3-eWk"/>
+                                </connections>
+                            </segmentedControl>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DFD-Mc-AQb" userLabel="Textfield Container View">
+                                <rect key="frame" x="87" y="357" width="240" height="128"/>
+                                <subviews>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fbx-gp-AzU">
+                                        <rect key="frame" x="0.0" y="8" width="240" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tce-8i-RYK">
+                                        <rect key="frame" x="0.0" y="50" width="240" height="34"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                </subviews>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="fbx-gp-AzU" secondAttribute="trailing" id="73u-kL-KcN"/>
+                                    <constraint firstItem="Tce-8i-RYK" firstAttribute="leading" secondItem="DFD-Mc-AQb" secondAttribute="leading" id="DkQ-9z-u7h"/>
+                                    <constraint firstItem="Tce-8i-RYK" firstAttribute="top" secondItem="fbx-gp-AzU" secondAttribute="bottom" constant="8" id="KBz-Yj-2km"/>
+                                    <constraint firstAttribute="width" secondItem="DFD-Mc-AQb" secondAttribute="height" multiplier="15:8" id="gNr-tX-7QT"/>
+                                    <constraint firstAttribute="trailing" secondItem="Tce-8i-RYK" secondAttribute="trailing" id="odq-TH-JxX"/>
+                                    <constraint firstItem="fbx-gp-AzU" firstAttribute="top" secondItem="DFD-Mc-AQb" secondAttribute="top" constant="8" id="rqJ-gF-pu4"/>
+                                    <constraint firstItem="Tce-8i-RYK" firstAttribute="top" secondItem="fbx-gp-AzU" secondAttribute="bottom" constant="8" id="wyb-1N-cPH"/>
+                                    <constraint firstItem="fbx-gp-AzU" firstAttribute="leading" secondItem="DFD-Mc-AQb" secondAttribute="leading" id="ymd-dQ-Vlv"/>
+                                </constraints>
+                            </view>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="lVm-tw-f34">
+                                <rect key="frame" x="83" y="485" width="248" height="36"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <state key="normal" title="Continue"/>
+                                <connections>
+                                    <action selector="didTapContinueButton:" destination="sqi-Gg-RuX" eventType="touchUpInside" id="kxe-Nf-8Wm"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="sbI-dB-ezP"/>
                         <color key="backgroundColor" red="1" green="0.72230407949999997" blue="0.53349173240000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="DFD-Mc-AQb" firstAttribute="centerY" secondItem="7aQ-cc-aE8" secondAttribute="centerY" id="AP4-Hk-nlS"/>
+                            <constraint firstItem="h7d-dH-FMP" firstAttribute="centerX" secondItem="7aQ-cc-aE8" secondAttribute="centerX" id="Mje-Ue-Wmd"/>
+                            <constraint firstItem="DFD-Mc-AQb" firstAttribute="centerX" secondItem="7aQ-cc-aE8" secondAttribute="centerX" id="OOW-kH-uEZ"/>
+                            <constraint firstItem="1sp-aa-3Fn" firstAttribute="top" secondItem="sbI-dB-ezP" secondAttribute="top" id="SXM-q9-MGZ"/>
+                            <constraint firstItem="h7d-dH-FMP" firstAttribute="width" secondItem="7aQ-cc-aE8" secondAttribute="width" multiplier="0.6" id="YTB-VR-RST"/>
+                            <constraint firstItem="lVm-tw-f34" firstAttribute="centerX" secondItem="7aQ-cc-aE8" secondAttribute="centerX" id="cnc-n3-5LA"/>
+                            <constraint firstItem="DFD-Mc-AQb" firstAttribute="width" secondItem="7aQ-cc-aE8" secondAttribute="width" multiplier="0.57971" id="ipp-Td-twe"/>
+                            <constraint firstItem="1sp-aa-3Fn" firstAttribute="centerX" secondItem="7aQ-cc-aE8" secondAttribute="centerX" id="roO-AW-WoA"/>
+                            <constraint firstItem="lVm-tw-f34" firstAttribute="top" secondItem="DFD-Mc-AQb" secondAttribute="bottom" id="sHM-Dx-hzR"/>
+                            <constraint firstItem="DFD-Mc-AQb" firstAttribute="top" secondItem="h7d-dH-FMP" secondAttribute="bottom" constant="16" id="vjn-is-l76"/>
+                            <constraint firstItem="lVm-tw-f34" firstAttribute="width" secondItem="7aQ-cc-aE8" secondAttribute="width" multiplier="0.6" id="x0c-Si-PXJ"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="uoj-vI-HaN"/>
+                    <connections>
+                        <outlet property="continueButton" destination="lVm-tw-f34" id="b1H-8w-Iub"/>
+                        <outlet property="emailTextField" destination="fbx-gp-AzU" id="FO5-Nf-Kda"/>
+                        <outlet property="loginSegmentControllerOutlet" destination="h7d-dH-FMP" id="wIv-tn-7sK"/>
+                        <outlet property="passwordTextField" destination="Tce-8i-RYK" id="NQq-mG-hhd"/>
+                        <outlet property="textfieldContainerView" destination="DFD-Mc-AQb" id="5i5-6Q-98z"/>
+                        <outlet property="titleLabel" destination="1sp-aa-3Fn" id="7F0-bk-dnW"/>
+                        <segue destination="HeG-6G-O1I" kind="show" identifier="toKeyframeSeg" id="54P-cN-wre"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="fTK-60-PNQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="878" y="83"/>
+            <point key="canvasLocation" x="410" y="108"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="pEZ-Bi-Za5">
+            <objects>
+                <viewController id="HeG-6G-O1I" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="tGU-6q-4eL">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="jMN-nr-aLm"/>
+                        <color key="backgroundColor" red="1" green="0.72230407949999997" blue="0.53349173240000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="asm-mn-a1f"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pQ8-WZ-1II" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1049" y="108"/>
         </scene>
     </scenes>
     <resources>
